# Job-Automation-Suite

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pr_body.md  .pr_body_clean.md  .ruff.toml  CODE_OF_CONDUCT.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.scraper  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  ai_tailor.py  all_containers.txt  all_containers_diagnostics.txt  all_containers_full.txt  build_error.txt  cv_bridge.py  docker-compose.yml  final_scraper_lean_logs.txt  final_scraper_lean_logs_v2.txt  final_scraper_logs.txt  final_scraper_logs_v2.txt  index.html  log_completion_check.txt  log_tail.txt  log_tail_final.txt  ps_output.txt  pyproject.toml  requirements.txt  test_bridge.py  test_bridge_v2.py  tests_output.txt  unindent_script.py  up_log.txt  (+1 more)
.github/: pull_request_template.md
core/: llm_sanitizer.py
data/: scrape_history.json  tracking.json
logs/: deepseek_raw_20792c5b5a01400ba977b2309189c512.txt  deepseek_raw_43bebb7bf99f4f4fab30f547c90c89c0.txt  deepseek_raw_9e6542b155a04fd7afef7651f8a58b8e.txt  deepseek_raw_f05383457705406bb6bbe32f58d4220e.txt
report/: 2026-04-03.md  2026-04-04.md  2026-04-09.md  2026-04-11.md  2026-04-15.md  2026-04-29.md  2026-05-07.md  2026-05-21.md
scratch/: anonymize.py  check_all_yamls.py  check_yamls.py  test_resilience_layer.py  test_themes.py  test_validator_hardening.py
scripts/: deploy.sh  enrich_companies.py  github_backup.sh  orchestrate_batches.py  test_hallucination_gate.py  test_master_cv_edit.py  universal_push.py
tests/: test_editor_ui.py
(+89 files in other folders)
